Bug 1285528 - [RTL] Collapse/Expand pane button is not properly displayed. r=ntim
MozReview-Commit-ID: KITju7vmqW6

UltraBlame original commit: f5875c1a1fbdb09f7bd586ef9cde06afec36a1ea

--- a/devtools/client/shared/components/sidebar-toggle.css
+++ b/devtools/client/shared/components/sidebar-toggle.css
@@ -13,6 +13,37 @@ sidebar
 -
 toggle
 :
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+:
+:
+before
+.
+sidebar
+-
+toggle
+.
+pane
+-
+collapsed
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+:
 :
 before
 {
@@ -42,6 +73,33 @@ toggle
 pane
 -
 collapsed
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+:
+:
+before
+.
+sidebar
+-
+toggle
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 :
 :
 before
@@ -78,6 +136,16 @@ sidebar
 -
 toggle
 :
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+:
 :
 before
 {
@@ -85,6 +153,33 @@ transform
 :
 rotate
 (
+90deg
+)
+;
+}
+.
+sidebar
+-
+toggle
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+:
+:
+before
+{
+transform
+:
+rotate
+(
+-
 90deg
 )
 ;
